--- a/docs/thesis/references.bib
+++ b/docs/thesis/references.bib
@@ -1117,19 +1117,27 @@ year = "",
 	note = { }
 }
 
-
 @article{
 	bell:logonormal,
 	author = { Bell, Michael and Perera, Supun and Piraveenan, Mahendrarajah and Bliemer, Michiel and Latty, Tanya and Reid, Chris },   
 	title = { Network growth models: A behavioural basis for attachment proportional to fitness },
 	year = {2008},
 	howpublished = {
-	\url{https://arxiv.org/pdf/1702.04046.pdf}
+		\url{https://arxiv.org/pdf/1702.04046.pdf}
 	},
 	note = { }
 }
 
-
+@article{
+	goldengorin:jager:tolerance,
+	author = { Goldengorin, Boris and Jäger, Gerold and Molitor, Paul },   
+	title = { Some Basics on Tolerances },
+	year = {2006},
+	howpublished = {
+	\url{}
+	},
+	note = { }
+}
 
 @book{
 	easly:kleinberg:network:crowds:markets,
