--- a/docs/thesis/references.bib
+++ b/docs/thesis/references.bib
@@ -892,6 +892,20 @@ year = "",
 }
 
 @article{
+	barabasi:robustness,
+	author = {Barabási, Albert-László and Bonabeau, Eric},
+	title = "Scale-Free Networks",
+	journal = "Scientific American",
+	volumeA = "325",
+	pages = "50-59",
+	month = "May",
+	year = "2003",
+	howpublished = {
+		\url{http://barabasi.com/f/124.pdf}
+	}
+}
+
+@article{
 	merton:matthew:effect,
 	title = "The Matthew Effect in Science",
 	author = {Merton, Robert K.},
