--- a/docs/thesis/results.tex
+++ b/docs/thesis/results.tex
@@ -24,10 +24,47 @@ Every simulation is run ten times and the mean and standard deviation($\sigma$) 
 	\hspace*{2mm} 
 \end{figure}
 
+\section{Robustness}
+
+\subsection{Accidental failure}
+
+\begin{figure}[!htb]
+	\hspace*{-1cm}\ 
+	\centering
+	\includegraphics[width=9cm]{images/robustness_barabasi.png}
+	\caption{ ...
+	}
+	\label{fig:alloc}
+	\hspace*{2mm} 
+\end{figure}
+
+\subsection{Coordinated attack}
+
+\begin{figure}[!htb]
+	\hspace*{-1cm}\ 
+	\centering
+	\includegraphics[width=9cm]{images/robustness_coordinated.png}
+	\caption{ ...
+	}
+	\label{fig:alloc}
+	\hspace*{2mm}
+\end{figure}
+
+\section{Path lenght}
+
+\begin{figure}[!htb]
+	\hspace*{-1cm}\ 
+	\centering
+	\includegraphics[width=9cm]{images/histogram_shortest_path.png}
+	\caption{ ...
+	}
+	\label{fig:alloc}
+	\hspace*{2mm}
+\end{figure}
+
+
 
 (preferential attachment)
-
-(pricing)
 
 (funding)
 
