--- a/docs/thesis/references.bib
+++ b/docs/thesis/references.bib
@@ -417,6 +417,48 @@ TOR, reverse govern-print mention
 	anote = {},
 }
 
+@article{
+	hong:kong:agreement,
+	title = "Hong Kong Agreement",
+	month = "February",
+	day = "20",
+	year = "2017",
+	author = {bitcoin roundtable},
+	howpublished={https://medium.com/@bitcoinroundtable/bitcoin-roundtable-consensus-266d475a61ff}
+}
+
+@article{
+	new:york:agreement,
+	title = "New York Agreement",
+	month = "May",
+	day = "23",
+	year = "2016",
+	author = {Digital Currency Group},
+	howpublished={https://medium.com/@DCGco/bitcoin-scaling-agreement-at-consensus-2017-133521fe9a77}
+}
+
+@article{
+	blockstream:sidechain,
+	title = "Enabling Blockchain Innovations with Pegged Sidechains",
+	author = {Back, Adam and Corallo, Matt and Dashjr, Luke and Friedenbach, Mark and Maxwell, Gregory and Miller, Andrew and Poelstra, Andrew and Timón, Jorge and Wuille, Pieter},
+	year = "2014",
+	month = "October",
+	day = "22",
+	howpublished = "https://blockstream.com/sidechains.pdf"
+}
+
+@article{
+	chaum:blind:signatures,
+	title = "Blind signatures for untraceable payments",
+	author = {Chaum, David},
+	journal = "Advances in Cryptology Proceedings of Crypto",
+	volume = "82",
+	number = "3",
+	pages = "199–203",
+	year = "1983",
+	howpublished = "https://sceweb.sce.uhcl.edu/yang/teaching/csci5234WebSecurityFall2011/Chaum-blind-signatures.PDF",
+}
+
 % Bitcoin - Bips
 
 @misc{bip:0141:segwit,
@@ -964,6 +1006,32 @@ year = "",
 	pages = "436-442"
 }
 
+@article{
+	watts:stragatz:small:networks,
+	author = {J. Watts, Duncan and H. Strogatz, Steven},
+	title = "Collective dynamics of‘small-world’ networks",
+	year = "1998",
+	month = "June",
+	day = "4",
+	journal = "Nature",
+	volume = "393",
+	pages = "440-443",
+	howpublished = {http://worrydream.com/refs/Watts-CollectiveDynamicsOfSmallWorldNetworks.pdf}
+}
+
+@article{
+	cohen:havlin:ultrasmall,
+	author = {Cohen, Reuven and Havlin, Shlomo},
+	title = "Scale-Free Networks Are Ultrasmall",
+	year = "2003",
+	month = "Februari",
+	day = "7",
+	journal = "Physical Review letters",
+	volume = "90",
+	number = "5",
+	pages = "",
+	howpublished = {}
+}
 
 @misc{
 	repository:gephi,
