--- a/docs/thesis/bitcoin.tex
+++ b/docs/thesis/bitcoin.tex
@@ -5,7 +5,7 @@
 
 \section{Digital Signatures}
 
-Part of the solution is provided by one way asymmetric encryption utilizing the \texttt{secp256k1} elliptic curve. Asymmetric encryption or public-key encryption allows the generation of key pairs with the ability to derive a public key from a private key without the ability to derive the private key from the public key and the ability to prove ownership of the private key through signatures without disclosing the private key. Ownership and expenditure of bitcoin is proved by signing a previous transaction output payable to the public key derived bitcoin address\footnote{A bitcoin address is derived from the public key by hashing the public key with both \texttt{SHA256} and \texttt{RIPEMD160}} with the accompanying private key. 
+Part of the solution is provided by one way asymmetric encryption utilizing the \texttt{secp256k1} elliptic curve. Asymmetric encryption or public-key encryption allows the generation of key pairs with the ability to derive a public key from a private key without the ability to derive the private key from the public key and the ability to prove ownership of the private key through signatures without disclosing the private key. Ownership and expenditure of bitcoin is proved by signing a previous transaction output payable to the public key derived bitcoin address\footnote{A bitcoin address is derived from the public key by hashing the public key with both \texttt{SHA256} and \texttt{RIPEMD160}} with the accompanying private key.\footnote{This part of the solution has been suggested many times before, earliest 1983~\cite{chaum:blind:signatures}}
 
 \begin{figure}[!htb]
 
@@ -33,7 +33,7 @@ The \textit{Proof-of-work} algorithm is directly tied into the bitcoin transacti
 \begin{figure}[!htb]
 	\hspace*{-0.4cm} 
 	\centering
-	\includegraphics[width=10cm]{images/blockchain.png}
+	\includegraphics[width=9cm]{images/blockchain.png}
 	\caption{\textit{Three blocks linked by the hash of the previous block's header. The content in the header is immutable and can't be replaced without redoing \textit{Proof-of-work}.
 	}}
 	\label{fig:blockchain}
