--- a/docs/thesis/glossary.tex
+++ b/docs/thesis/glossary.tex
@@ -25,6 +25,8 @@
 %		Programming Interface}, first={Application
 %		Programming Interface (API)\glsadd{apig}}, see=[Glossary:]{apig}}
 
-\newglossaryentry{bitcoin}{name={Bitcoin}, description={Bitcoin is a peer-to-peer electronic cash network and a currency native to the network}}
+\newglossaryentry{bitcoin}{name={Bitcoin}, description={Bitcoin is a peer-to-peer electronic cash network and a currency native to the network.}}
 
 \newglossaryentry{blockchain}{name={blockchain},description={A blockchain is a growing datastructure consistent of blocks containing transactions, a cryptograpic hash of the previous block and a timestamp. It is record or ledger over the full transaction history.  }}
+
+\newglossaryentry{degree}{name={degree distribution}, description={The distribution over the fraction of nodes with k edges. }}
